--- a/src/common/less/base.less
+++ b/src/common/less/base.less
@@ -19,6 +19,12 @@ body .pop-mess{
 	min-width: 100px !important;
 }
 
+// 去除 表格底部出现的滚动效果
+.el-table__body-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
 [class^="el-icon-fa"], [class*=" el-icon-fa"] {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome!important;
