监控，创建监控策略

--- a/src/common/less/base.less
+++ b/src/common/less/base.less
@@ -24,6 +24,10 @@ body .pop-mess{
     overflow: hidden;
     position: relative;
 }
+// 穿梭框的边框颜色
+.el-transfer-panel{
+	border:1px solid #d0d0d0;
+}
 
 [class^="el-icon-fa"], [class*=" el-icon-fa"] {
     display: inline-block;
