--- a/src/common/less/base.less
+++ b/src/common/less/base.less
@@ -37,3 +37,7 @@ body .pop-mess{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+// 日期选择器
+.el-date-range-picker.has-sidebar{
+	z-index: 3000!important;
+}
